# chefmind

./: .gitignore  README.md  SPEC.md  app.py  chefmind_theme.py  main.py  pyproject.toml  seed_index.py
agent/: agent.py  prompts.py
debug/: catalog.py  chunks.py  debug_chunks.py  search.py
help/: clear_all.py  clear_video.py
rag/: ingestion.py  nutrition_ingestion.py  retriever.py
tools/: tools.py
